k8s/media-services/sonobarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonobarr
  namespace: media-services
  labels:
    app: sonobarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: sonobarr
